updated to 2021x refresh 2, osgi is removed removed activemq and mms java client dependencies some more tagged value, stereotype fixes